@@ -4,7 +4,8 @@ Priority: extra
 Maintainer: Rui Nuno Capela <rncbc@rncbc.org>
 Build-Depends: debhelper (>= 11), cmake, pkg-config,
   qtbase6-static (>= 6.1), qttools6-static (>= 6.1),
-  qttranslations6-static (>= 6.1), qtsvg6-static (>= 6.1),
+  qtsvg6-static (>= 6.1), qtwayland6-static (>= 6.1),
+  qttranslations6-static (>= 6.1),
   libjack-dev | libjack-jackd2-dev, libasound2-dev,
   lv2-dev, liblo-dev
 Standards-Version: 3.9.7
